--- a/package.json
+++ b/package.json
@@ -5,14 +5,20 @@
   "main": "index.js",
   "scripts": {
     "start:build": "tsc -w",
-    "start: run" : "nodemon build/index.js",
-    "start": "concurrently npm: strart:*"
+    "start:run": "nodemon build/index.js",
+    "start": "concurrently npm:start:*"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/body-parser": "^1.19.4",
+    "@types/cookie-session": "^2.0.46",
+    "@types/express": "^4.17.20",
+    "body-parser": "^1.20.2",
     "concurrently": "^8.2.2",
+    "cookie-session": "^2.0.0",
+    "express": "^4.18.2",
     "nodemon": "^3.0.1"
   }
 }
